# YottaProject1

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  activate.sh  package-lock.json  package.json  pyproject.toml  setup.py
config/: config.py  config.yml
models/: ml_model.pkl
notebooks/eda-notebook/: eda-notebook.ipynb  eda_utilities.py
notebooks/model-interpretability/: interpretability_utilities.py  model-interpretability.ipynb
notebooks/model-interpretability-notebook/: model-interpretability-notebook.ipynb
notebooks/model-notebook/: model_utilities.py
notebooks/model-optimization-notebook/: model-optimization-notebook.ipynb
src/application/: predict.py  train.py
src/config/: base.py  column_names.py  config.py  config.yml  config_template.yml
src/domain/: build_features.py  cleaning.py  feature-engineering.py
src/domain/tests/: test_build_features.py  test_cleaning.py
src/infrastructure/: build_dataset.py  make_dataset.py  preprocess_data.py
