[tool.poetry]
name = "productsubscription-oc-jk"
version = "0.1.0"
description = "Yotta Project 1"
authors = ["Jérémie Koster and Olivier Collier"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
sklearn = "^0.0"
scipy = "^1.6.0"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
