[tool.poetry]
name = "productsubscription-oc-jk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas-profiling = "^2.10.1"
ipython = "^7.20.0"
scipy = "^1.6.1"
ipdb = "^0.13.4"
scikit-learn = "^0.24.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
